--- a/app/src/main/res/layout/fragment_purchase_supplier_cost_view.xml
+++ b/app/src/main/res/layout/fragment_purchase_supplier_cost_view.xml
@@ -78,7 +78,6 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
                 android:background="@color/line_gray_cost" />
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -86,54 +85,93 @@
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp">
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/quantity"
+                    android:textColor="@color/light_gray"
+                    android:textSize="16sp" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/cost"
-                        android:textColor="@color/light_gray"
-                        android:textSize="16sp" />
-
-                    <TextView
-                        android:id="@+id/quantity"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
-                        android:layout_marginEnd="5dp"
-                        android:importantForAutofill="no"
-                        android:text="Qty : 10"
-                        android:textColor="@color/black"
-                        android:textSize="16sp" />
-                </RelativeLayout>
-
-                <RelativeLayout
+                <TextView
+                    android:id="@+id/quantity"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
-                    android:padding="5dp">
+                    android:importantForAutofill="no"
+                    android:padding="5dp"
+                    android:textColor="@color/black"
+                    android:textSize="16sp" />
+            </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:background="@color/line_gray_cost" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                android:weightSum="2">
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="5dp"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/unit_cost"
+                        android:textColor="@color/light_gray"
+                        android:textSize="16sp" />
+
 
                     <TextView
                         android:id="@+id/cost_unit"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
                         android:importantForAutofill="no"
-                        android:text="Unit : 50"
+                        android:padding="5dp"
+                        android:text="50"
                         android:textColor="@color/black"
                         android:textSize="16sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Total Cost"
+                        android:textColor="@color/light_gray"
+                        android:textSize="16sp" />
+
 
                     <TextView
                         android:id="@+id/cost_Total"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
+                        android:layout_marginTop="5dp"
                         android:importantForAutofill="no"
-                        android:text="Total : 500"
+                        android:padding="5dp"
+                        android:text="50"
                         android:textColor="@color/black"
                         android:textSize="16sp" />
-                </RelativeLayout>
+                </LinearLayout>
 
 
             </LinearLayout>
