--- a/app/src/main/res/layout/activity_request_details.xml
+++ b/app/src/main/res/layout/activity_request_details.xml
@@ -243,7 +243,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_toStartOf="@id/expand_cost"
                                 android:padding="5dp"
-                                android:src="@drawable/ic_edit"
+                                android:src="@drawable/ic_error"
                                 android:visibility="gone"
                                 app:tint="@color/red" />
 
