--- a/app/src/main/res/layout/activity_job_order_details.xml
+++ b/app/src/main/res/layout/activity_job_order_details.xml
@@ -62,6 +62,7 @@
                     android:paddingBottom="5dp"
                     android:text="@string/edit"
                     android:textColor="@color/white"
+                    android:visibility="gone"
                     app:drawableStartCompat="@drawable/ic_edit"
                     app:drawableTint="@color/white" />
             </RelativeLayout>
