--- a/app/src/main/res/layout/activity_edit_job_order.xml
+++ b/app/src/main/res/layout/activity_edit_job_order.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_above="@id/create_job_order">
+        android:layout_above="@id/submit">
 
         <LinearLayout
             android:layout_width="match_parent"
