--- a/app/src/main/res/layout/item_job_order_request.xml
+++ b/app/src/main/res/layout/item_job_order_request.xml
@@ -65,7 +65,7 @@
                     android:layout_marginTop="10dp"
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
-                    android:visibility="visible">
+                    android:visibility="gone">
 
                     <TextView
                         android:id="@+id/cost_type"
