--- a/app/src/main/res/layout/item_edit_job_order_request.xml
+++ b/app/src/main/res/layout/item_edit_job_order_request.xml
@@ -58,6 +58,54 @@
                     android:visibility="visible">
 
                     <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/quantity"
+                        android:textColor="@color/black"
+                        android:textSize="16sp" />
+
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="100dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="5dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginEnd="5dp"
+                        android:layout_marginBottom="5dp"
+                        android:background="@color/list_item_bg"
+                        app:cardCornerRadius="8dp"
+                        app:cardElevation="3dp">
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+
+                            <EditText
+                                android:id="@+id/quantity"
+                                android:layout_width="match_parent"
+                                android:layout_height="40dp"
+                                android:background="@color/transparent"
+                                android:hint="@string/quantity"
+                                android:importantForAutofill="no"
+                                android:inputType="numberDecimal"
+                                android:padding="10dp"
+                                android:textColor="@color/black"
+                                android:textSize="16sp" />
+                        </RelativeLayout>
+                    </androidx.cardview.widget.CardView>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:visibility="visible">
+
+                    <TextView
                         android:id="@+id/cost_type"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
