--- a/app/src/main/res/layout/item_projects.xml
+++ b/app/src/main/res/layout/item_projects.xml
@@ -36,8 +36,8 @@
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
                         android:layout_marginEnd="5dp"
+                        android:layout_weight="1"
                         android:orientation="vertical">
 
                         <LinearLayout
@@ -72,11 +72,10 @@
                             android:layout_height="wrap_content"
                             android:text="@string/test_text"
                             android:textColor="@color/black"
-                            android:textStyle="bold"
-                            android:textSize="16sp" />
+                            android:textSize="16sp"
+                            android:textStyle="bold" />
 
                     </LinearLayout>
-
 
 
                 </LinearLayout>
@@ -116,8 +115,8 @@
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
                         android:layout_marginEnd="5dp"
+                        android:layout_weight="1"
                         android:orientation="vertical">
 
                         <TextView
@@ -351,10 +350,10 @@
                 android:id="@+id/show_actions"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
                 android:layout_alignParentEnd="true"
-                android:padding="7dp"
+                android:adjustViewBounds="true"
                 android:contentDescription="@string/description"
+                android:padding="7dp"
                 android:src="@drawable/ic_actions" />
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
