--- a/app/src/main/res/menu/request_actions.xml
+++ b/app/src/main/res/menu/request_actions.xml
@@ -9,9 +9,13 @@
         android:id="@+id/request_cancel"
         android:title="@string/cancel" />
 
-
     <item
         android:id="@+id/request_delete"
         android:title="@string/delete" />
+
+    <item
+        android:id="@+id/request_resume"
+        android:title="@string/resume"
+        android:visible="false"/>
 
 </menu>
