--- a/app/src/main/res/layout/activity_print_edit.xml
+++ b/app/src/main/res/layout/activity_print_edit.xml
@@ -30,12 +30,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
-            android:text="@string/new_request"
+            android:text="@string/edit_request"
             android:textColor="@color/black"
             android:textSize="24sp"
             android:textStyle="bold" />
 
     </LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -519,7 +523,7 @@
                 android:layout_marginTop="20dp"
                 android:background="@drawable/btn_yellow"
                 android:baselineAligned="false"
-                android:text="@string/send_request"
+                android:text="@string/update_request"
                 android:textAllCaps="false"
                 android:textColor="@color/black" />
 
@@ -527,4 +531,11 @@
     </ScrollView>
 
 
+    <ProgressBar
+        android:id="@+id/loading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_gravity="center" />
+</RelativeLayout>
 </LinearLayout>
