--- a/app/src/main/res/layout/activity_requests.xml
+++ b/app/src/main/res/layout/activity_requests.xml
@@ -131,6 +131,12 @@
                 android:layout_height="wrap_content"
                 android:text="@string/photography" />
 
+            <com.google.android.material.tabs.TabItem
+                android:id="@+id/extras_tab"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/extras" />
+
 
         </com.google.android.material.tabs.TabLayout>
 
