--- a/app/src/main/res/layout/fragment_extras_requests_list.xml
+++ b/app/src/main/res/layout/fragment_extras_requests_list.xml
@@ -5,10 +5,16 @@
     android:layout_height="match_parent"
     tools:context=".requests.list.Extras_requests_list">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        tools:listitem="@layout/item_request_print" />
 
+
+    <ProgressBar
+        android:id="@+id/loading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center" />
 </FrameLayout>
