--- a/app/src/main/res/layout/fragment_extras_requests_list.xml
+++ b/app/src/main/res/layout/fragment_extras_requests_list.xml
@@ -5,16 +5,31 @@
     android:layout_height="match_parent"
     tools:context=".requests.list.Extras_requests_list">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:listitem="@layout/item_request_print" />
+        android:orientation="vertical">
 
+        <Button
+            android:id="@+id/add_extras_request"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/add_extras_request"
+            android:textAllCaps="false" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:listitem="@layout/item_request_print" />
+
+    </LinearLayout>
 
     <ProgressBar
         android:id="@+id/loading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center" />
+
+
 </FrameLayout>
